RP2 feat:完成接入消息队列
